assets/css/styles.css
body {
    font-family: Inter, sans-serif;
    margin: 0;
    padding: 0;
    background-color: aqua;

}
.wrapper {
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
    background-color: #FFFFFF;
    padding: 20px;
}

header{
    background-color: #F5DAD2;
}

#homeBtn{
    border: black 1px solid;
}

.navbar-nav{
    font-size: 1.25rem;
    color: #75A47F;
    cursor: pointer;
    text-decoration: none;
}

/* ALL SECTIONS */
#cover, #about, #resume, #portfolio, #contact {
    padding: 20px 20px;
    background-color: violet;
}
/* COVER SECTION */
.two-cols-container {
    display: flex;
    gap: 20px;
    background-color: orange;

}
/* Media query for mobile devices */
@media (max-width: 768px) {
    .cover-container {
        flex-direction: column;
    }
    
    .wrapper {
        padding: 0 20px;
    }
}
.maridanne, .description{
    flex: 1;
    min-width: 300px;
    background-color: green;

}

.maridanne img {
    max-width: 100%;
    height: auto;
    border-radius: 10px;
}

.social-links {
    margin-top: 20px;

}

.social-links a {
    text-decoration: none;
    color: black; /* Facebook's brand color */
    margin: 0 10px;
    font-size: 24px;
}

.social-links a:hover {
    color: #2d4373; /* Darker shade on hover */
}

/* ABOUT SECTION */
.about-desc, .tech-interest {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    background-color: yellow;
    
}
.short-desc, .long-desc, .technologies-stack, .other-interests{
    flex: 1;
    min-width: 300px;
    background-color: crimson;
}
.short-desc,  .technologies-stack{
    font-size: 1.25rem;
}

.technologies-stack, .other-interests {
    flex: 1;
    min-width: 300px;
    background-color: deeppink;
}

.d-flex{
    background-color: aquamarine;
    margin: 30px;

}

/* Responsive Design */
@media (max-width: 768px) {
    .about-desc, .tech-interest {
        flex-direction: column;
    }
}

/* RESUME SECTION */

/* PORTFOLIO SECTION */

/* FOOTER */
footer {
    text-align: center;
    padding: 3px;
    background-color: DarkSalmon;
    color: white;
}

